updating tmux plugin manager to reflect correct install path

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,4 +19,4 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.config/tmux/plugins/tpm/tpm'
