--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,22 +1,18 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
-set-option -g focus-events on
-set-option -sg escape-time 10
+set -g focus-events on
+set -sg escape-time 10
+set -sa terminal-features ",*:hyperlinks"
 
-unbind C-b
 set -g prefix C-a
+unbind C-b 
 bind C-a send-prefix
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Status Bar config
-#set -g status-right 'Battery: #{battery_percentage} #{battery_icon} | %a %h-%d %H:%M '
-#set -g status-right 'Colors: #{battery_color_bg}bg#[default] #{battery_color_fg}fg#[default] #{battery_color_charge_bg}charge_bg#[default] #{battery_color_charge_fg}charge_fg#[default] #{battery_color_status_bg}status_bg#[default] #{battery_color_status_fg}status_fg#[default] | Graph: #{battery_graph} | Icon: #{battery_icon} | Charge Icon: #{battery_icon_charge} | Status Icon: #{battery_icon_status} | Percent: #{battery_percentage} | Remain: #{battery_remain}'
-#set -g status-right '#(gitmux "#{pane_current_path}")'
+set bind h select-pane -L
+set bind j select-pane -D
+set bind k select-pane -U
+set bind l select-pane -R
 
 set -g @catppuccin_flavour 'mocha'
 
@@ -24,13 +20,5 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session'
-# fullscreen CLI made easy with this status
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
 
-run -b '~/.config/tmux/plugins/tpm/tpm'
+set run -b '~/.config/tmux/plugins/tpm/tpm'
