getting tmux config in a working state

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,10 +9,10 @@ unbind C-b
 bind C-a send-prefix
 
 # Vim style pane selection
-set bind h select-pane -L
-set bind j select-pane -D
-set bind k select-pane -U
-set bind l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 set -g @catppuccin_flavour 'mocha'
 
@@ -21,4 +21,5 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set run -b '~/.config/tmux/plugins/tpm/tpm'
+set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
+run '~/.config/tmux/plugins/tpm/tpm'
