--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Start new windows in home directory
+bind c new-window -c ~
+
 set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
