--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,9 +6,24 @@ font-family = MonaspiceKr Nerd Font Mono
 theme = tokyonight
 cursor-style = block
 cursor-style-blink = false
-macos-icon = microchip
-#theme = catppuccin-mocha
+macos-icon = retro
 
+keybind = ctrl+n=new_window
 
-#keybind = ctrl+z=close_surface
-#keybind = ctrl+d=new_split:right
+keybind = ctrl+h=goto_split:left
+keybind = ctrl+j=goto_split:bottom
+keybind = ctrl+k=goto_split:top
+keybind = ctrl+l=goto_split:right
+
+keybind = ctrl+a>h=new_split:left
+keybind = ctrl+a>j=new_split:down
+keybind = ctrl+a>k=new_split:up
+keybind = ctrl+a>l=new_split:right
+keybind = ctrl+a>f=toggle_split_zoom
+
+keybind = ctrl+a>n=next_tab
+keybind = ctrl+a>p=previous_tab
+
+keybind = super+r=reload_config
+
+window-save-state = always
